[package]
name = "daisy"
version = "0.5.0" # hack/release.sh
authors = [ "Petr Horáček <hrck@protonmail.com>" ]
edition = "2018"
license = "MIT"
description = "A board support package for the Electro-Smith Daisy Seed and Patch SM"
repository = "https://github.com/zlosynth/daisy"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "cortex-m",
    "bsp",
    "stm32h7xx",
    "daisy",
]
readme = "README.md"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]


# - dependencies --------------------------------------------------------------

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = [ "device" ] }
stm32h7xx-hal = { version = "0.12.1", features = [ "stm32h750v", "rt", "revision_v", "usb_hs", "xspi" ] }
cortex-m-semihosting = "0.3.5"
num_enum = { version = "0.5.6", optional = true, default-features = false }


# - dev dependencies ----------------------------------------------------------

[dev-dependencies]
panic-itm = { version = "~0.4.1" }
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.6" }
systick-monotonic = "1"
cortex-m-rtic = "1"
embedded-graphics = "0.7"
display-interface-spi = "0.4"
ssd1306 = "0.7.0"
fugit = "0.3"


# - features ------------------------------------------------------------------

[features]
log-itm = []
seed = []
seed_1_1 = [ "num_enum" ]
patch_sm = [ "num_enum" ]


# - profiles ------------------------------------------------------------------

[profile.dev]
debug = true
incremental = false
opt-level = "s" # optimize for binary size

[profile.release]
debug = true
opt-level = "s" #  optimize for binary size


# - examples ------------------------------------------------------------------

[[example]]
name = "blinky"

[[example]]
name = "blinky_rtic"

[[example]]
name = "audio"

[[example]]
name = "adc"

[[example]]
name = "itm"
required-features = [ "log-itm" ]

[[example]]
name = "oled"

[[example]]
name = "flash"
