[package]
name = "daisy"
version = "0.9.0" # hack/release.sh
authors = [ "Petr Horáček <hrck@protonmail.com>" ]
edition = "2018"
license = "MIT"
description = "A board support package for the Electro-Smith Daisy Seed and Patch SM"
repository = "https://github.com/zlosynth/daisy"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "cortex-m",
    "bsp",
    "stm32h7xx",
    "daisy",
]
readme = "README.md"
documentation = "https://zlosynth.com/daisy"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = [ "device" ] }
stm32h7xx-hal = { version = "0.16", features = [ "stm32h750v", "rt", "revision_v", "usb_hs", "xspi", "fmc" ] }
stm32-fmc = "0.3"
num_enum = { version = "0.5.6", optional = true, default-features = false }

[dev-dependencies]
systick-monotonic = "1"
cortex-m-rtic = "1"
embedded-graphics = "0.8"
display-interface-spi = "0.4"
ssd1306 = "0.8.0"
fugit = "0.3"
# HAL in examples requires an additional SDMMC feature.
stm32h7xx-hal = { version = "0.16", features = [ "stm32h750v", "rt", "revision_v", "usb_hs", "xspi", "fmc", "sdmmc" ] }
defmt = { version = "0.3.8" }
defmt-rtt = { version = "0.4.1" }
panic-halt = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[features]
seed = []
seed_1_1 = [ "num_enum" ]
seed_1_2 = []
patch_sm = [ "num_enum" ]
sampling_rate_96khz = []
defmt = []

[[example]]
name = "blinky"

[[example]]
name = "blinky_rtic"

[[example]]
name = "audio"

[[example]]
name = "audio_rtic"

[[example]]
name = "adc"

[[example]]
name = "oled"

[[example]]
name = "flash"

[[example]]
name = "sdram"

[[example]]
name = "sdmmc"
